fix css on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -88,8 +88,8 @@ background: linear-gradient(90deg, rgba(255,225,112,1) 5%, rgba(121,9,89,1) 95%)
     font-size: 1.9rem;
     margin: 0; }
   .article h5 {
-    margin: 0;
-    font-size: 1.75rem; }
+    font-size: 1.75rem;
+    margin: 0; }
   .article h6 {
     font-size: 1.25rem;
     margin: 0;
@@ -107,7 +107,6 @@ background: linear-gradient(90deg, rgba(255,225,112,1) 5%, rgba(121,9,89,1) 95%)
 @media only screen and (max-width: 700px) {
   .article {
     margin: 0;
-    background-color: #f0f0f0;
     font-size: 1rem;
     padding: 0.3rem 1.1rem 2rem 1.1rem; }
     .article h1 {
@@ -131,8 +130,6 @@ background: linear-gradient(90deg, rgba(255,225,112,1) 5%, rgba(121,9,89,1) 95%)
       margin: 0; }
     .article p {
       font-size: 1rem; }
-    .article ul {
-      padding: 0 1rem 0 1.5rem; }
     .article li {
       font-size: 1rem; } }
 
